--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-electron-store",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/reZach/secure-electron-store.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "mrspade",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/reZach/secure-electron-store/issues"
