making everything transpile back to es2015, since we aren't using "new" anymore

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,5 @@
 {
     "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": {
-                    "node": true
-                }
-            }
-        ]
+        "@babel/preset-env"
     ]
 }
