--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-electron-store",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.7.7"
   },
   "dependencies": {
-    "conf": "^6.2.0"
+    "conf": "^6.2.0",
+    "electron": "^7.1.9"
   }
 }
