msgpack now works! minifying prod js file better logging fixed bug in one place where we weren't actually getting file contents renderer process can now take in options object

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7"
+    "@babel/preset-env": "^7.7.7",
+    "babel-preset-minify": "^0.5.1"
+  },
+  "dependencies": {
+    "@msgpack/msgpack": "^1.11.0"
   }
 }
