--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secure-electron-store",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "A secure electron-store that uses ipcMain/ipcRenderer.",
   "main": "lib/index.js",
   "scripts": {
     "build": "npx babel ./src -d ./lib"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/reZach/secure-electron-store.git"
   },
   "keywords": [],
-  "author": "mrspade",
+  "author": "reZach",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/reZach/secure-electron-store/issues"
