--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-electron-store",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A secure electron-store that uses ipcMain/ipcRenderer.",
   "main": "lib/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "babel-preset-minify": "^0.5.1"
   },
   "dependencies": {
-    "@msgpack/msgpack": "^2.6.0"
+    "@msgpack/msgpack": "^2.6.0",
+    "process": "^0.11.10"
   }
 }
