Generate and add typescript declaration file

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "4.0.2",
   "description": "A secure electron-store that uses ipcMain/ipcRenderer.",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "npx babel ./src -d ./lib"
+    "build": "npm run genTypes & npx babel ./src -d ./lib",
+    "genTypes": "tsc src/*.js --declaration --allowJs --emitDeclarationOnly --target ES2015 --outDir ./lib"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,8 @@
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
-    "babel-preset-minify": "^0.5.2"
+    "babel-preset-minify": "^0.5.2",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@msgpack/msgpack": "^2.7.2",
